static/picture-generate/for-bot.css
.qr-footer {
  align-items: center;
  display: flex;
  flex-direction: row;
  font-size: larger;
  justify-content: space-around;
  margin-top: 1.5em;
  text-align: center;
}

.qr-footer > img {
  margin: 0 !important;
  width: 100px;
  height: 100px;
}

.content .qr-footer {
  margin-top: 2em;
}

.hide-content .qr-footer {
  margin-top: 0;
}

.hide-content .qr-footer + h2 {
  margin-top: 0.75em !important;
}

.scan-tip {
  color: #555;
  margin: 0 !important;
}

.bilberry-hugo-theme .main .article-wrapper.single {
  padding-bottom: 0;
}

.bilberry-hugo-theme #comments-container {
  display: none;
}

.bilberry-hugo-theme footer {
  background: none;
}

.bilberry-hugo-theme article .content h1 a {
  text-decoration: none !important;
}

.bilberry-hugo-theme article .content a {
  text-decoration: underline;
}

.bilberry-hugo-theme article .hide-content h3 {
  margin: 1em 0 1em 0.5em;
  border-bottom: none;
  padding: 0;
}

.bilberry-hugo-theme
  article
  .hide-content
  > *:not(h1):not(h2):not(h3):not(.meta):not(.qr-footer) {
  display: none !important;
}

